[gd_scene load_steps=27 format=2]

[ext_resource path="res://Walls.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Gameplay_Camera.gd" type="Script" id=3]
[ext_resource path="res://fonts/connection_ii/ConnectionII.otf" type="DynamicFontData" id=4]
[ext_resource path="res://Enemy_Spawner.gd" type="Script" id=5]
[ext_resource path="res://Score.gd" type="Script" id=6]
[ext_resource path="res://Card_Container.gd" type="Script" id=7]
[ext_resource path="res://Assets/Tile.tres" type="Texture" id=8]
[ext_resource path="res://Player_HealthBar.gd" type="Script" id=9]
[ext_resource path="res://Background.gd" type="Script" id=10]
[ext_resource path="res://Menu.gd" type="Script" id=11]

[sub_resource type="OccluderPolygon2D" id=26]
polygon = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="ConvexPolygonShape2D" id=27]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=25]
1/name = "Tile.tres 1"
1/texture = ExtResource( 8 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/occluder = SubResource( 26 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 27 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 27 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0.40724 )
colors = PoolColorArray( 0, 0.694118, 1, 0 )

[sub_resource type="GradientTexture2D" id=9]
gradient = SubResource( 6 )

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 1, 0.305882, 0.301961, 1 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 8 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.94902, 0.94902, 0.94902, 1 )
border_width_left = 6
border_width_top = 5
border_width_right = 6
border_width_bottom = 5
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=17]
size = 51
use_filter = true
extra_spacing_char = -1
extra_spacing_space = -9
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 150
outline_size = 8
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = 1
extra_spacing_bottom = 1
extra_spacing_char = 1
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=18]
size = 181
use_filter = true
extra_spacing_top = 1
extra_spacing_bottom = 1
extra_spacing_char = 1
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="DynamicFont" id=19]
size = 214
outline_size = 7
outline_color = Color( 0.866667, 0.427451, 0, 1 )
use_filter = true
extra_spacing_top = 1
extra_spacing_bottom = 1
extra_spacing_char = 1
extra_spacing_space = -28
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="DynamicFont" id=22]
size = 55
use_filter = true
extra_spacing_top = 1
extra_spacing_bottom = 1
extra_spacing_char = 1
extra_spacing_space = -12
font_data = ExtResource( 4 )

[node name="Main" type="Node2D"]
scale = Vector2( 1.02003, 1 )

[node name="Walls" type="TileMap" parent="."]
tile_set = SubResource( 25 )
collision_layer = 15
collision_mask = 13
occluder_light_mask = 3
format = 1
tile_data = PoolIntArray( -5, 1610612737, 0, 393213, 1610612737, 0, 393214, 1610612737, 0, 393215, 1610612737, 0, 1114092, 1610612737, 0 )
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]
z_index = -10
script = ExtResource( 10 )

[node name="ColorRect" type="ColorRect" parent="Background"]
show_behind_parent = true
margin_left = -1188.0
margin_top = -716.0
margin_right = 1178.0
margin_bottom = 717.0
color = Color( 0.82, 0.4756, 0.4756, 1 )

[node name="Player" parent="." instance=ExtResource( 2 )]

[node name="Gameplay_Camera" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 2.3, 2.3 )
script = ExtResource( 3 )

[node name="Enemy_Spawner" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Card_Container" type="HBoxContainer" parent="."]
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -886.248
margin_top = -254.0
margin_right = 878.752
margin_bottom = 246.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 100
alignment = 1
script = ExtResource( 7 )

[node name="Player_HealthBar" type="TextureProgress" parent="."]
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -537.0
margin_top = 585.0
margin_right = 551.0
margin_bottom = 655.0
rect_pivot_offset = Vector2( 544.102, 39 )
value = 100.0
texture_under = SubResource( 9 )
texture_progress = SubResource( 10 )
fill_mode = 6
nine_patch_stretch = true
script = ExtResource( 9 )

[node name="HealthBar_Container" type="Panel" parent="Player_HealthBar"]
show_behind_parent = true
light_mask = 0
margin_left = -6.45782
margin_top = -4.82837
margin_right = 1093.54
margin_bottom = 75.1716
custom_styles/panel = SubResource( 11 )

[node name="Label" type="Label" parent="Player_HealthBar"]
light_mask = 0
margin_left = -6.45776
margin_top = -4.75549
margin_right = 1093.54
margin_bottom = 75.2445
custom_fonts/font = SubResource( 17 )
text = "Health"
align = 1
valign = 1
uppercase = true

[node name="Score" type="Label" parent="."]
light_mask = 0
anchor_left = 0.5
anchor_right = 0.5
margin_left = -822.5
margin_top = -671.0
margin_right = 822.5
margin_bottom = -519.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 1
script = ExtResource( 6 )

[node name="Menu" type="Control" parent="."]
visible = false
light_mask = 0
script = ExtResource( 11 )

[node name="ColorRect" type="ColorRect" parent="Menu"]
light_mask = 0
margin_left = -1179.0
margin_top = -692.0
margin_right = 1179.0
margin_bottom = 691.0
mouse_filter = 2
color = Color( 0.0941176, 0.0941176, 0.0941176, 0.921569 )

[node name="Button" type="Button" parent="Menu"]
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -236.5
margin_top = 21.0
margin_right = 236.5
margin_bottom = 211.0
custom_colors/font_color_hover = Color( 0.670588, 0.670588, 0.670588, 1 )
custom_fonts/font = SubResource( 18 )
custom_styles/focus = SubResource( 20 )
text = "Start"
flat = true

[node name="Label" type="Label" parent="Menu"]
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -817.0
margin_top = -442.828
margin_right = 817.0
margin_bottom = -5.82837
custom_fonts/font = SubResource( 19 )
custom_styles/normal = SubResource( 21 )
text = "Shooty Shooty 
Bang Bang"
align = 1
valign = 1

[node name="Label2" type="Label" parent="Menu"]
light_mask = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -352.0
margin_top = 232.0
margin_right = 352.0
margin_bottom = 289.0
custom_fonts/font = SubResource( 22 )
custom_styles/normal = SubResource( 21 )
text = "Use Arrow Keys to Move!"

[connection signal="pressed" from="Menu/Button" to="Menu" method="_on_Button_pressed"]
